#!/usr/bin/env python3
"""
gRPC Gateway Service - Phase 4.3
High-Performance API Server
"""
import grpc
from concurrent import futures
import fortress_pb2
import fortress_pb2_grpc
from datetime import datetime
import json
import asyncio

class FortressSecurityService(fortress_pb2_grpc.FortressSecurityServicer):
    
    def GetSecurityOverview(self, request, context):
        """Get security overview"""
        return fortress_pb2.SecurityOverviewResponse(
            overall_score=87.3,
            vulnerability_score=82.5,
            compliance_score=94.2,
            threat_score=85.1,
            total_assets=1247,
            critical_vulnerabilities=23,
            active_threats=5
        )
    
    def GetVulnerabilities(self, request, context):
        """Get vulnerabilities list"""
        vulnerabilities = [
            fortress_pb2.Vulnerability(
                id="vuln-001",
                cve_id="CVE-2023-1234",
                title="Critical Container Escape",
                severity="CRITICAL",
                cvss_score=9.8,
                status="OPEN"
            )
        ]
        
        return fortress_pb2.VulnerabilitiesResponse(
            vulnerabilities=vulnerabilities,
            total_count=1
        )
    
    def GetClusterHealth(self, request, context):
        """Get cluster health information"""
        return fortress_pb2.ClusterHealthResponse(
            cluster_id=request.cluster_id,
            status="HEALTHY",
            nodes=3,
            pods=45,
            cpu_usage=65.4,
            memory_usage=72.1
        )
    
    def StartSecurityScan(self, request, context):
        """Start a security scan"""
        scan_id = f"scan-{datetime.now().strftime('%Y%m%d-%H%M%S')}"
        
        return fortress_pb2.ScanResponse(
            scan_id=scan_id,
            status="STARTED",
            message="Security scan initiated successfully"
        )

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    fortress_pb2_grpc.add_FortressSecurityServicer_to_server(
        FortressSecurityService(), server
    )
    
    listen_addr = '[::]:8089'
    server.add_insecure_port(listen_addr)
    
    print(f"gRPC server starting on {listen_addr}")
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()
